AÑADO MI NOMBRE OSCAR index.html
pues eso

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <h1>TAREA DE ANTONIO</h1>
  	 <p> Si quiere mi compañero puede cambiar mi nombre por el suyo</p>
 	 <br>
-	 <p style="color: red">ANTONIO</p> 
+	 <p style="color: red">OSCAR</p> 
    
     
 </body>
